--- a/electron-admin/src/ui/index.html
+++ b/electron-admin/src/ui/index.html
@@ -1,1 +1,13 @@
-<h1>hello world</h1>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="./index.css" rel="stylesheet">
+    <title>E-commerce Admin</title>
+</head>
+<body>
+    <script src="./app.js"></script>
+</body>
+</html>
