--- a/electron-admin/src/ui/index.html
+++ b/electron-admin/src/ui/index.html
@@ -8,6 +8,67 @@
     <title>E-commerce Admin</title>
 </head>
 <body>
+    <div class="buttons-collection">
+        <button class="" id="add_prod" >Add Category</button>
+        <button class="" id="add_cat">Add Product</button>
+    </div>
+
+    <div class="category-section" id="category_section">
+        <div class="card">
+            <h2 class="title">Add New Category</h2>
+            <form>
+                <div class="form-group">
+                    <input type="text" class="cat-name" id="cat_name" placeholder="Name"/>
+                    <label>Add Category Name</label>
+                </div>
+                <div class="form-group">
+                    <textarea class="cat-desc" id="cat_desc" placeholder="Description"></textarea>
+                    <label>Add Category Description</label>
+                </div>
+                <div class="add-btn">
+                    <button class="btn-submit">ADD</button>
+                </div>
+            </form>
+        </div>
+    </div>
+    <div class="product-section" id="product_section">
+        <div class="card">
+            <h2 class="title">Add New Product</h2>
+            <form>
+                <div class="form-group">
+                    <input type="text" id="prod_name" placeholder="Name"/>
+                    <label>Add Product Name</label>
+                </div>
+                <div class="form-group">
+                    <textarea id="prod_desc" placeholder="Description"></textarea>
+                    <label>Add Product Description</label>
+                </div>
+                <div class="form-group">
+                    <input type="number" id="prod_sku" placeholder="SKU"/>
+                    <label>Add Product SKU</label>
+                </div>
+                <div class="form-group">
+                    <input type="number" id="prod_price" placeholder="Price"/>
+                    <label>Add Product Price</label>
+                </div>
+                <div class="form-group">
+                    <select>
+                        <option>Test 1</option>
+                        <option>Test 2</option>
+                    </select>
+                    <label>Select Product Category</label>
+                </div>
+                <div class="form-group">
+                    <input type="number" id="prod_inventory" placeholder="Inventory"/>
+                    <label>Add Product Inventory</label>
+                </div>
+                <div class="add-btn">
+                    <button class="btn-submit">ADD</button>
+                </div>
+            </form>
+        </div>
+    </div>
+
     <script src="./app.js"></script>
 </body>
 </html>
