--- a/electron-admin/src/ui/index.html
+++ b/electron-admin/src/ui/index.html
@@ -26,7 +26,7 @@
                     <label>Add Category Description</label>
                 </div>
                 <div class="add-btn">
-                    <button class="btn-submit">ADD</button>
+                    <button class="btn-submit">Add Category</button>
                 </div>
             </form>
         </div>
@@ -63,7 +63,7 @@
                     <label>Add Product Inventory</label>
                 </div>
                 <div class="add-btn">
-                    <button class="btn-submit">ADD</button>
+                    <button class="btn-submit">Add Product</button>
                 </div>
             </form>
         </div>
