added add category functionality

--- a/electron-admin/src/ui/index.html
+++ b/electron-admin/src/ui/index.html
@@ -26,7 +26,10 @@
                     <label>Add Category Description</label>
                 </div>
                 <div class="add-btn">
-                    <button class="btn-submit">Add Category</button>
+                    <button class="btn-submit" id="add_category">Add Category</button>
+                </div>
+                <div class="status">
+                    <p id="cat_status"></p>
                 </div>
             </form>
         </div>
@@ -68,7 +71,7 @@
             </form>
         </div>
     </div>
-
+    <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
     <script src="./app.js"></script>
 </body>
 </html>
