fixed cat prod ids

--- a/electron-admin/src/ui/index.html
+++ b/electron-admin/src/ui/index.html
@@ -9,8 +9,8 @@
 </head>
 <body>
     <div class="buttons-collection">
-        <button class="" id="add_prod" >Add Category</button>
-        <button class="" id="add_cat">Add Product</button>
+        <button class="" id="add_cat" >Add Category</button>
+        <button class="" id="add_prod">Add Product</button>
     </div>
 
     <div class="category-section" id="category_section">
