select option category

--- a/electron-admin/src/ui/index.html
+++ b/electron-admin/src/ui/index.html
@@ -55,7 +55,7 @@
                     <label>Add Product Price</label>
                 </div>
                 <div class="form-group">
-                    <select>
+                    <select id="select_category">
                     </select>
                     <label>Select Product Category</label>
                 </div>
