--- a/electron-admin/src/ui/index.html
+++ b/electron-admin/src/ui/index.html
@@ -63,6 +63,10 @@
                     <input type="number" id="prod_inventory" placeholder="Inventory" required/>
                     <label>Add Product Inventory</label>
                 </div>
+                <div class="form-group">
+                    <input type="file" id="prod_img" required/>
+                    <label>Upload Product Inventory</label>
+                </div>
                 <div class="add-btn">
                     <button class="btn-submit" id="add_product">Add Product</button>
                 </div>
