accept only image type for file input

--- a/electron-admin/src/ui/index.html
+++ b/electron-admin/src/ui/index.html
@@ -64,7 +64,7 @@
                     <label>Add Product Inventory</label>
                 </div>
                 <div class="form-group">
-                    <input type="file" id="prod_img" required/>
+                    <input type="file" id="prod_img" accept="image/*" required/>
                     <label>Upload Product Inventory</label>
                 </div>
                 <div class="add-btn">
