added login for admin

--- a/electron-admin/src/ui/index.html
+++ b/electron-admin/src/ui/index.html
@@ -12,6 +12,7 @@
         <button class="" id="add_cat" >Add Category</button>
         <button class="" id="add_prod">Add Product</button>
     </div>
+    <a href="login.html">login</a>
 
     <div class="category-section" id="category_section">
         <div class="card">
