--- a/electron-admin/src/ui/index.html
+++ b/electron-admin/src/ui/index.html
@@ -5,79 +5,41 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="./index.css" rel="stylesheet">
+    <link rel="stylesheet" href="https://unicons.iconscout.com/release/v4.0.0/css/line.css"/>
     <title>E-commerce Admin</title>
 </head>
 <body>
-    <div class="buttons-collection">
-        <button class="" id="add_cat" >Add Category</button>
-        <button class="" id="add_prod">Add Product</button>
-    </div>
-    <a href="login.html">login</a>
+<div class="container">
+    <div class="form login">
+        <span class="title">Login</span>
 
-    <div class="category-section" id="category_section">
-        <div class="card">
-            <h2 class="title">Add New Category</h2>
-            <form>
-                <div class="form-group">
-                    <input type="text" class="cat-name" id="cat_name" placeholder="Name" required/>
-                    <label>Add Category Name</label>
-                </div>
-                <div class="form-group">
-                    <textarea class="cat-desc" id="cat_desc" placeholder="Description"></textarea>
-                    <label>Add Category Description</label>
-                </div>
-                <div class="add-btn">
-                    <button class="btn-submit" id="add_category">Add Category</button>
-                </div>
-                <div class="status">
-                    <p id="cat_status"></p>
-                </div>
-            </form>
-        </div>
+        <form action="#" method="post">
+            <div class="input-field">
+                <input type="text" placeholder="Enter your email" id="email" name="email" required />
+                <i class="uil uil-envelope icon"></i>
+            </div>
+            <div class="input-field">
+                <input
+                        type="password"
+                        class="password"
+                        id="password"
+                        name="password"
+                        placeholder="Enter your password"
+                        required
+                />
+                <i class="uil uil-lock icon"></i>
+                <i class="uil uil-eye-slash showHidePw"></i>
+            </div>
+            <div class="response">
+                <p class="login-response" id="status"></p>
+            </div>
+            <div class="input-field button">
+                <input type="button" id="login-btn" value="Login Now" />
+            </div>
+        </form>
     </div>
-    <div class="product-section" id="product_section">
-        <div class="card">
-            <h2 class="title">Add New Product</h2>
-            <form>
-                <div class="form-group">
-                    <input type="text" id="prod_name" placeholder="Name" required/>
-                    <label>Add Product Name</label>
-                </div>
-                <div class="form-group">
-                    <textarea id="prod_desc" placeholder="Description"></textarea>
-                    <label>Add Product Description</label>
-                </div>
-                <div class="form-group">
-                    <input type="text" id="prod_sku" placeholder="SKU" required/>
-                    <label>Add Product SKU</label>
-                </div>
-                <div class="form-group">
-                    <input type="number" id="prod_price" placeholder="Price" required/>
-                    <label>Add Product Price</label>
-                </div>
-                <div class="form-group">
-                    <select id="select_category">
-                    </select>
-                    <label>Select Product Category</label>
-                </div>
-                <div class="form-group">
-                    <input type="number" id="prod_inventory" placeholder="Inventory" required/>
-                    <label>Add Product Inventory</label>
-                </div>
-                <div class="form-group">
-                    <input type="file" id="prod_img" accept="image/*" required/>
-                    <label>Upload Product Inventory</label>
-                </div>
-                <div class="add-btn">
-                    <button class="btn-submit" id="add_product">Add Product</button>
-                </div>
-                <div class="status">
-                    <p id="prod_status"></p>
-                </div>
-            </form>
-        </div>
-    </div>
-    <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
-    <script src="./app.js"></script>
+</div>
+<script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
+<script src="./app.js"></script>
 </body>
 </html>
